something done rapidly from v0.dev by vercel

--- a/index.html
+++ b/index.html
@@ -48,6 +48,27 @@
                                     >
                                 </li>
                                 <li>
+                                    <a href="./Teachers/ForgotPassword.html"
+                                        >Forgot password mail</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="./Teachers/exam-results.html"
+                                        >Exam Ended and Results (Receiver
+                                        Teacher)</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="./Teachers/exam-reminder.html"
+                                        >Exam OnGoing (Receiver Teacher)</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="./Teachers/newsletter.html"
+                                        >Newsletter</a
+                                    >
+                                </li>
+                                <li>
                                     <a href=""
                                         >Organization Under Review Email</a
                                     >
@@ -73,17 +94,6 @@
                                 <li>
                                     <a href=""
                                         >Exam Scheduled (Receiver Teacher)</a
-                                    >
-                                </li>
-                                <li>
-                                    <a href=""
-                                        >Exam OnGoing (Receiver Teacher)</a
-                                    >
-                                </li>
-                                <li>
-                                    <a href=""
-                                        >Exam Ended and Results (Receiver
-                                        Teacher)</a
                                     >
                                 </li>
                                 <li>
